[tool.poetry]
name = "DermaML"
version = "0.0.0"
description = ""
license = "Apache-2.0"
authors = ["April Zhang <april.zhang@berkeley.edu>", "Kevin Chu <kevin@velexi.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
dvc = {extras = ["s3"], version = "^3.0"}
fds = {git = "https://github.com/velexi-research/fds.git"}  # FastDS
ipython = "^8.0"
jupyterlab = "^4.0"
kaleido= "^0,<=0.2.1"
matplotlib = "^3.5"
mlflow = "^2.4"
opencv-python = "^4.6"
pip = ">=22.2"
python-slugify = "^8.0"
PyYAML = "^6.0"
pdoc = "^14.0"
pillow = "^9.2"
pycaret = "^3.0"
scikit-image = "^0.19.3"
tqdm = "^4.64"
typer = "^0,>=0.9"


# security vulnerability fixes
pywin32 = [
    { version = '>=301', platform = 'win32' },
]

# software testing packages
coverage = "^7.0"
pylint = "^2.14"
pytest = "^7.1"
pytest-cov = "^4.0"
pytest-flake8 = "^1.1"
pytest-xdist = "^3.0"

# code quality packages
black = {extras = ["jupyter"], version = "^23.0"}
flake8 = "<5.0.0"  # Unpin after compatibility with pytest-flake8 is fixed
pre-commit = "^3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
