[tool.poetry]
name = "DermaML"
version = "0.0.0"
description = ""
license = "Apache-2.0"
authors = ["April Zhang <april.zhang@berkeley.edu>", "Kevin Chu <kevin@velexi.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"

# data management
dvc = {extras = ["s3"], version = "^3.0"}
fds = {git = "https://github.com/velexi-research/fds.git"}  # Fork of FastDS

# research infrastructure
ipython = "^8.0"
jupyter-dash = "^0.4.2"
jupyterlab = "^4.0"
matplotlib = "^3.7.1"
mlflow = "^2.4"

# miscellaneous utilities
pdoc = "^14.0"
python-slugify = "^8.0"
PyYAML = "^6.0"
tqdm = "^4.64"
typer = "^0,>=0.9"

# software testing
coverage = "^7.0"
pylint = "^2.14"
pytest = "^7.2"
pytest-cov = "^4.0"
pytest-flake8 = "^1.1.1"
pytest-pylint = "^0,>=0.18"
pytest-xdist = "^3.0"

# code quality
black = {extras = ["jupyter"], version = "^23.0"}
flake8 = "<5.0.0"  # Unpin after compatibility with pytest-flake8 is fixed
pre-commit = "^3.2"

# security vulnerability fixes
pywin32 = [
    { version = '>=301', platform = 'win32' },
]

# project-specific packages
kaleido= "^0,<=0.2.1"
opencv-python = "^4.6"
pillow = "^9.2"
pycaret = "^3.0"
scikit-image = "^0.19.3"
rembg = "^2.0.49"
torch = "^2.0.1"
torchvision = "^0.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
